[fix][#74] Fix Wordification to use correct checking and marking of visited entities, fixes